--- a/index.html
+++ b/index.html
@@ -12,151 +12,151 @@
       function usrpas()
       {
          switch(document.ingreso.pass.value) {
-                case "3150" :
+                case "3150n" :
                     window.alert("Hola AYALA ZOE, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1s_fWMQiWmxaD0LBeuf27Mx--BeoL7iuk?usp=sharing");
                     break;
-                case "1417" :
+                case "1917a" :
                     window.alert("Hola BENÍTEZ MORENO ANDREA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1-PxZwX5coPYpfqKssBQj3xdS-ExQt73p?usp=sharing");
                     break;
-                case "2346" :
+                case "2346m" :
                     window.alert("Hola CABALLERO VERÓN MILAGROS, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1_HTEbcAzf56l20CWi_zGdIA0GFcBblWL?usp=sharing");
                     break; 
-                case "8927" :
+                case "8927g" :
                     window.alert("Hola CANTERO PRISCILA GERALDINE, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1L0FZegNoJbCblKbNvTw-jvu1fxT8qq6w?usp=sharing");
                     break;
-                case "5056" :
+                case "5076e" :
                     window.alert("Hola CARI LLANOS MELINA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1tFtt6KFJeqncJnAktFXxpyT-MqewLWnK?usp=sharing");
                     break;
-                case "4319" :
+                case "4319b" :
                     window.alert("Hola CASTILLO FLORES BIANCA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1vtKoQYr1Aix85RHL56cZeIz8fgk6yvRu?usp=sharing");                 
                     break;
-                case "2802" :
+                case "2805m" :
                     window.alert("Hola CERMELLI UMA MILENA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1aqM7M0747puGqp6bpMFTIOq-Uz1LtB26?usp=sharing");
                     break;
-                case "8696" :
+                case "8690c" :
                     window.alert("Hola CISNERO BRISA CANDELA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1H1vp-40bG6YbTpQ4Q0a3k0pnjpPJGkQn?usp=sharing");
                     break;
-                case "7446" :
+                case "7146m" :
                     window.alert("Hola GÓMEZ MICHELLE ABIGAIL, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/17iDxXEeTUe1wiBb46fAiJXs6JdfeKRZs?usp=sharing");
                     break;
-                case "4676" :
+                case "4176a" :
                     window.alert("Hola MARCELLO KIARA ALEJANDRA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1FWZO8mhfhfk-vr1j117KxbYYNAa0j5ha?usp=sharing");
                     break;
-                case "4955" :
+                case "4951g" :
                     window.alert("Hola NIEVA GUZMÁN MILAGROS, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1CAoieIOAnGnBLbrea9LFYT94hMVf1EW2?usp=sharing");
                     break;
-                case "8283" :
+                case "8259g" :
                     window.alert("Hola ORTIZ CANDELA GISELLE, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1liRW0VWwJDFyoc8yOAdVjXiar6s1I95N?usp=sharing");
                     break;
-                case "9378" :
+                case "9378n" :
                     window.alert("Hola PÉREZ NADIA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1SUMwogNd5XLTW_cmqQ6Ns9_jt6y-VcV0?usp=sharing");
                     break;
-                case "5683" :
+                case "5683m" :
                     window.alert("Hola RIZZO DÍAZ GUADALUPE, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/15PYCkxxDTkofPV_pXeLmlouvsfu75wf3?usp=sharing");
                     break;
-                case "2791" :
+                case "2791p" :
                     window.alert("Hola SUÁREZ PAULA VALENTINA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1UkwZ_HV35xlDVFQtYjrihLtxltv3uJ9V?usp=sharing");
                     break;
-                case "7090" :
+                case "7095a" :
                     window.alert("Hola UYUQUIPA MORENA AYLÉN, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1u-yEhEXeoChPT5GP0AWBTMiU_TuxEPNn?usp=sharing");
                     break;
-                case "7740" :
+                case "7340z" :
                     window.alert("Hola VERA ANTONIO ZAIRA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1AOzuYW15UBhE1m5V5U7P7nuIFPHkzBLd?usp=sharing");
                     break;
-                case "7254" :
+                case "7254v" :
                     window.alert("VERSACI MARIANA VICTORIA, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1jWAVB75tJZ16ISYFKjLU7dBamlxVSn7m?usp=sharing");
                     break;
-                case "5167" :
+                case "5167g" :
                     window.alert("ALDERETE GONZALO, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1HBT8abo952WRTOKjn2fatO6F0jWPHQic?usp=sharing");
                     break;
-                case "4065" :
+                case "4065j" :
                     window.alert("BRÍTEZ ROLANDO JOAQUIN, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1RM56JWmRGEUHNxblgMCreq0X3aJDycL_?usp=sharing");
                     break;
-                case "8387" :
+                case "8387d" :
                     window.alert("CÁCERES ALEXANDER DANIEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1c1G68lmOt2YJnPyy92HjoqUMIp9HzbJa?usp=sharing");
                     break;
-                case "8109" :
+                case "8109a" :
                     window.alert("CALDERÓN TOLOZA AXEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1hCm9ekIx_NGmVDnrnB4pf2XbgMNsvrSB?usp=sharing");
                     break;
-                case "6238" :
+                case "6238e" :
                     window.alert("CIOCOLETTO THOMÁS EMILIANO, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1jqs3nuNfCygGqUMlfvkOXRGzjxoe9LcQ?usp=sharing");
                     break;
-                case "6400" :
+                case "6473j" :
                     window.alert("CORO CÁRDENAS JOEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/130caR_0JnA3viOVruMPjtrgVdnacnekE?usp=sharing");
                     break;
-                case "6579" :
+                case "6579s" :
                     window.alert("CORONEL DUARTE SANTINO, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1uRBKj4bNiotTQ5WrddPwxd-DzCm4y4BJ?usp=sharing");
                     break;
-                case "3455" :
+                case "3458n" :
                     window.alert("DELIONARI NORIEGA NICOLÁS, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1ypQY4BEI4EvPnOJiP1O_rX-rDIqMhJ7V?usp=sharing");
                     break;
-                case "1864" :
+                case "1569a" :
                     window.alert("GAUNA ISAÍAS ARIEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1hOMjuDqG2vxBrWloIpsazHnKxLlqAzV6?usp=sharing");
                     break;
-                case "3619" :
+                case "3619s" :
                     window.alert("GODOY SANTIAGO EZEQUIEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                     window.location.replace("https://drive.google.com/drive/folders/1kTkOtjMNclcqSrrNKyZ_JeZGCDpReaGh?usp=sharing");
                     break;
-                case "2474" :
+                case "2473a" :
                       window.alert("GÓMEZ ALEXIS JAVIER, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/16jKeitYUW4X_f1uCeLfYxY4VZOocdyJj?usp=sharing");
                     break;
-                case "7800" :
+                case "7840m" :
                       window.alert("GÓMEZ NÚÑEZ MATÍAS, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/1kDD7LCQP-MbGPs4_2750VpR5RcrB7eJv?usp=sharing");
                     break;
-                case "6999" :
+                case "6907a" :
                       window.alert("JARDINES IGNACIO AGUSTÍN, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/1_6S3uMQl1fPkKybf6M2UfFHiAzAELst5?usp=sharing");
                     break;
-                case "1428" :
+                case "1428j" :
                       window.alert("MAMANI ROJAS ÁNGEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/1mJyttWqqIvOfS1eW1Uxqcj2iSC23gs7h?usp=sharing");
                     break;
-                case "3643" :
+                case "3845a" :
                       window.alert("ORTIZ AXEL IVÁN, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/1D4J15kHTC2tXtc6B4FGiVM54JbJQzi3h?usp=sharing");
                     break;
-                case "1821" :
+                case "1826m" :
                       window.alert("PÁEZ MATÍAS EZEQUIEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/1RdqcxzK4rytJbC9smezmQRH24-6lLZ9o?usp=sharing");
                     break;
-                case "8061" :
+                case "9461b" :
                       window.alert("RÍOS BRUNO EZEQUIEL, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/1uCG1Ed4zDArqIan0JIBmXWq0iVsXBh08?usp=sharing");
                     break;
-                case "8334" :
+                case "8034f" :
                       window.alert("SALAZAR FERNÁNDEZ BRIAN, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/1obb4FUCIjbkpTA414Pze88Pv2hn4iYn5?usp=sharing");
                     break;
-                case "1274" :
+                case "1274j" :
                       window.alert("SERVÍN JOEL FACUNDO, estás por enviar archvivos a tu carpeta de " + mensaje);
                       window.location.replace("https://drive.google.com/drive/folders/16aoqwg-VJKceL-nmlDQPvKdGxy6O_sLC?usp=sharing");
                     break;
